--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/PinValidation.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/PinValidation.xaml
@@ -21,7 +21,10 @@
             <RowDefinition Height=".2*"/>
             <RowDefinition Height=".7*"/>
         </Grid.RowDefinitions>
-        <Label Content="Withdraw Transaction" Grid.Row="0" Style="{StaticResource TitleTextLong}"  Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <StackPanel Orientation="Horizontal" >
+            <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource screenLogoImage}"/>
+            <Label Content="Withdraw Transaction" Grid.Row="0" Style="{StaticResource TitleTextLong}"  Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </StackPanel>
         <kioskControls:KioskProgressBar x:Name="transactionProgressBar" Grid.Row="1" ItemsSource="{Binding Steps}" Foreground="#FF086398" Progress="{Binding Progress}" SnapsToDevicePixels="True" Margin="40"/>
         <Grid x:Name="inputPIN" Grid.Row="2">
             <Grid HorizontalAlignment="Center" Margin="50">
