--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -12,6 +12,15 @@
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontSize" Value="36"/>
     </Style>
+    <Style x:Key="screenLogoImage" TargetType="Image">
+        <Setter Property="Width" Value="50"/>
+        <Setter Property="Margin" Value="10,0,20,0" />
+    </Style>
+    <Style x:Key="buttonLogoImage" TargetType="Image">
+        <Setter Property="Width" Value="50"/>
+        <Setter Property="Margin" Value="10,0,0,0" />
+    </Style>
+
     <Style x:Key="LargeTileStyle" TargetType="Controls:Tile">
         <Setter Property="Width" Value="300" />
         <Setter Property="Height" Value="125" />
