--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/BankOptions.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/BankOptions.xaml
@@ -49,7 +49,10 @@
             <RowDefinition Height=".8*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource screenLogoImage}"/>
             <Label Content="Tap on the Transaction you would like to complete.." Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            </StackPanel>
         </Grid>
         <Image Grid.Row="01" Grid.Column="0" HorizontalAlignment="Left" Source="/Resources/Images/icici.png" Margin="20,0,0,0"/>
 
@@ -66,17 +69,33 @@
                 </Style>
             </ListBox.ItemContainerStyle>
             <ListBoxItem>
-                <Button  Style="{StaticResource MetroButton}" 
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource buttonLogoImage}"/>
+                    <Button  Style="{StaticResource MetroButton}" 
                          Command="{Binding ButtonCommand}" CommandParameter="Withdraw Cash">Withdraw Cash</Button>
+                </StackPanel>
+             
             </ListBoxItem>
             <ListBoxItem>
-                <Button Style="{StaticResource MetroButton}">Deposit Cash</Button>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource buttonLogoImage}"/>
+
+                    <Button Style="{StaticResource MetroButton}">Deposit Cash</Button>
+                </StackPanel>
             </ListBoxItem>
             <ListBoxItem>
-                <Button Style="{StaticResource MetroButton}">Deposit Cheque</Button>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource buttonLogoImage}"/>
+
+                    <Button Style="{StaticResource MetroButton}">Deposit Cheque</Button>
+                </StackPanel>
             </ListBoxItem>
             <ListBoxItem>
-                <Button Style="{StaticResource MetroButton}">Print Mini Statement</Button>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource buttonLogoImage}"/>
+
+                    <Button Style="{StaticResource MetroButton}">Print Mini Statement</Button>
+                </StackPanel>
             </ListBoxItem>
         </ListBox>
     </Grid>
