--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/BioAuthenctication.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/BioAuthenctication.xaml
@@ -33,11 +33,11 @@
                     <RowDefinition Height=".7*"/>
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Please place your registered thumb impression finger on the Finger print scanner ....</TextBlock>
-                <Image Grid.Row="1" Margin="10" Source="/Resources/Images/Touch-Screen.png" Height="100"></Image>
+                <Image Grid.Row="1" VerticalAlignment="Center" Margin="10" Source="/Resources/Images/Touch-Screen.png" Height="150" Width="150"></Image>
                 <Button x:Name="btnThumbprint"  Grid.Row="1" Width="100" Height="50"
                         BorderThickness="2" 
                         Style="{StaticResource MetroButton}"
-                        Margin="300,0,0,0" Content="Go"
+                        Margin="300,-10,0,0" Content="Go"
                         VerticalAlignment="Center" Command="{Binding ButtonCommand}" CommandParameter="ThumbPrint"/>
             </Grid>
         </Grid>
