--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -18,6 +18,7 @@
     </Style>
     <Style x:Key="buttonLogoImage" TargetType="Image">
         <Setter Property="Width" Value="50"/>
+        <Setter Property="Height" Value="50"/>
         <Setter Property="Margin" Value="10,0,0,0" />
     </Style>
 
