--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/AmountToWithdraw.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/AmountToWithdraw.xaml
@@ -10,7 +10,7 @@
         BorderBrush="Black"
         BorderThickness="1"
         xmlns:kioskControls="clr-namespace:DoyenBiz.BankingKiosk.Controls"
-        
+       MaxWidth="950" Width="900"
         >
     <controls:Flyout.Background>
         <ImageBrush ImageSource="/Resources/Images/ScreenBackground.jpg"/>
@@ -27,14 +27,15 @@
         </StackPanel>
         <kioskControls:KioskProgressBar x:Name="transactionProgressBar" Grid.Row="1" ItemsSource="{Binding Steps}" Foreground="#FF086398" Progress="{Binding Progress}" SnapsToDevicePixels="True" Margin="40"/>
         <Grid x:Name="amountToWithdraw" Grid.Row="2">
-            <Grid HorizontalAlignment="Center" Margin="50">
+            <Grid HorizontalAlignment="Center" >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height=".3*"/>
-                    <RowDefinition Height=".3*"/>
-                    <RowDefinition Height=".5*"/>
+                    <RowDefinition Height=".2*"/>
+                    <RowDefinition Height=".2*"/>
                     <RowDefinition Height=".7*"/>
+                    <RowDefinition Height=".2*"/>
+                    <RowDefinition Height=".3*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}"
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" VerticalAlignment="Top"
                            TextWrapping="WrapWithOverflow" Foreground="Black">Place enter amount you would like to withdraw ...</TextBlock>
                 <Grid Grid.Row="1"  Height="50" HorizontalAlignment="Center">
                     <TextBox x:Name="txtAmount" Width="100" Height="50"
@@ -47,8 +48,27 @@
                         VerticalAlignment="Center" Command="{Binding ButtonCommand}" 
                             CommandParameter="{Binding Text,ElementName=txtAmount}" />
                 </Grid>
-                <TextBlock Grid.Row="2" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" TextAlignment="Left" >Quick Select</TextBlock>
-                <Grid x:Name="bankLogos" Grid.Row="3" Grid.Column="0">
+                <Grid Grid.Row="2">
+                    <StackPanel Width="400" Height="500" HorizontalAlignment="Center" VerticalAlignment="Top" >
+                        <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                            <WrapPanel>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="7" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="7" />
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="8" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="8"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="9" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="9"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="4" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="4"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="5" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="5"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="6" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="6"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="1" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="1"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="2" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="2"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="3" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="3"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="0" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="0"/>
+                                <Button Width="220" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="backspace" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="backspace"/>
+                            </WrapPanel>
+                        </ScrollViewer>
+                    </StackPanel>
+                </Grid>
+                <TextBlock Grid.Row="3" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" TextAlignment="Left" >Quick Select</TextBlock>
+                <Grid x:Name="bankLogos" Grid.Row="4" Grid.Column="0" VerticalAlignment="Top">
                     <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         <WrapPanel Width="600">
                             <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="100">INR 100</Button>
@@ -56,10 +76,10 @@
                             <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="1000">INR 1000</Button>
                             <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="1500">INR 1500</Button>
 
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="2000">INR 2000</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="2500">INR 2500</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="5000">INR 5000</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="10000">INR 10000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,30" Command="{Binding AmountChangeCommand}" CommandParameter="2000">INR 2000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,30" Command="{Binding AmountChangeCommand}" CommandParameter="2500">INR 2500</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,30" Command="{Binding AmountChangeCommand}" CommandParameter="5000">INR 5000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,30" Command="{Binding AmountChangeCommand}" CommandParameter="10000">INR 10000</Button>
                         </WrapPanel>
                     </ScrollViewer>
                 </Grid>
