--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/PinValidation.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/PinValidation.xaml
@@ -10,7 +10,7 @@
         BorderBrush="Black"
         BorderThickness="1"
         xmlns:kioskControls="clr-namespace:DoyenBiz.BankingKiosk.Controls"
-        
+          MaxWidth="950" Width="900"
         >
     <controls:Flyout.Background>
         <ImageBrush ImageSource="/Resources/Images/ScreenBackground.jpg"/>
@@ -45,6 +45,25 @@
                         Style="{StaticResource MetroButton}"
                         Margin="300,0,0,0" Content="Go"
                         VerticalAlignment="Center"  Command="{Binding ButtonCommand}" CommandParameter="{Binding ElementName=inputPINBox}"/>
+                </Grid>
+                <Grid Grid.Row="2">
+                    <StackPanel Width="400" Height="500" HorizontalAlignment="Center" VerticalAlignment="Top" >
+                        <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                            <WrapPanel>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="7" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="7"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="8" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="8"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="9" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="9"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="4" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="4"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="5" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="5"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="6" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="6"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="1" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="1"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="2" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="2"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="3" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="3"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="0" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="0"/>
+                                <Button Width="220" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="backspace" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="backspace"/>
+                            </WrapPanel>
+                        </ScrollViewer>
+                    </StackPanel>
                 </Grid>
             </Grid>
         </Grid>
