--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -119,6 +119,7 @@
                             <Setter Property="Foreground" Value="Black"/>
                             <Setter Property="FontWeight" Value="Bold"/>
                             <Setter Property="BorderThickness" Value="4" />
+                            <Setter Property="Width" Value="120" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Foreground" Value="#ADADAD"/>
@@ -306,7 +307,7 @@
                                 </ItemsControl.ItemsPanel>
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding}" HorizontalAlignment="Center" Margin="0,5,0,0" FontFamily="Segoe UI" FontSize="15" Foreground="Black"/>
+                                        <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding}" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center" Margin="0,5,0,0" FontFamily="Segoe UI" FontSize="15" Foreground="Black"/>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
