--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -28,9 +28,14 @@
         <Setter Property="TitleFontSize" Value="10" />
     </Style>
 
+    <Style x:Key="LargeTileStyleTrans" TargetType="Controls:TransitioningContentControl">
+        <Setter Property="Width" Value="300" />
+        <Setter Property="Height" Value="125" />
+    </Style>
+
     <Style x:Key="SmallTileStyle" TargetType="Controls:Tile">
-        <Setter Property="Width" Value="100" />
-        <Setter Property="Height" Value="100" />
+        <Setter Property="Width" Value="120" />
+        <Setter Property="Height" Value="125" />
         <Setter Property="TitleFontSize" Value="10" />
     </Style>
     
@@ -59,7 +64,8 @@
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Top" />
-    </Style> 
+    </Style>
+
 
     <DataTemplate x:Key="smallTileDataTemplate">
         <Image Source="{Binding Image}" Height="100" Width="100"/>
