--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Common/Styles.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
+                    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:local="clr-namespace:DoyenBiz.CitizenKiosk.Controls"
+                    xmlns:converters="clr-namespace:DoyenBiz.CitizenKiosk.Converters">
 
     <Style x:Key="TitleText" TargetType="Label">
         <Setter Property="FontFamily" Value="Segoe UI"/>
@@ -10,6 +12,15 @@
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontSize" Value="36"/>
     </Style>
+    <Style x:Key="screenLogoImage" TargetType="Image">
+        <Setter Property="Width" Value="50"/>
+        <Setter Property="Margin" Value="10,0,20,0" />
+    </Style>
+    <Style x:Key="buttonLogoImage" TargetType="Image">
+        <Setter Property="Width" Value="50"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Margin" Value="10,0,0,0" />
+    </Style>
 
     <Style x:Key="LargeTileStyle" TargetType="Controls:Tile">
         <Setter Property="Width" Value="300" />
@@ -17,9 +28,14 @@
         <Setter Property="TitleFontSize" Value="10" />
     </Style>
 
+    <Style x:Key="LargeTileStyleTrans" TargetType="Controls:TransitioningContentControl">
+        <Setter Property="Width" Value="300" />
+        <Setter Property="Height" Value="125" />
+    </Style>
+
     <Style x:Key="SmallTileStyle" TargetType="Controls:Tile">
-        <Setter Property="Width" Value="100" />
-        <Setter Property="Height" Value="100" />
+        <Setter Property="Width" Value="120" />
+        <Setter Property="Height" Value="125" />
         <Setter Property="TitleFontSize" Value="10" />
     </Style>
 
@@ -34,10 +50,22 @@
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="TextAlignment" Value="Justify"/>
     </Style>
+
+    <Style x:Key="instructionsText" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontSize" Value="36"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+    </Style>
+
+    <Thickness x:Key="ControlMargin">0 5 0 0</Thickness>
+
     <Style x:Key="contentListBox" TargetType="ListBox">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Top" />
     </Style>
+
 
     <DataTemplate x:Key="smallTileDataTemplate">
         <Image Source="{Binding Image}" Height="100" Width="100"/>
@@ -107,16 +135,17 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="MetroButton" TargetType="{x:Type Button}">
+
+    <Style x:Key="MetroButtonSmall" TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource ButtonFocusVisual}"/>
         <Setter Property="Background" Value="#EEEEEEEE"/>
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Padding" Value="10 5"/>
-        <Setter Property="FontSize" Value="30" />
-        <Setter Property="Width" Value="365" />
+        <Setter Property="FontSize" Value="20" />
         <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Width" Value="100" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -126,10 +155,63 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}">
-                        <Border.Effect>
-                            <DropShadowEffect Color="Black" Opacity=".50" ShadowDepth="6" RenderingBias="Quality" />
-                        </Border.Effect>
+                            <Border.Effect>
+                                <DropShadowEffect Color="Black" Opacity=".50" ShadowDepth="6" RenderingBias="Quality" />
+                            </Border.Effect>
                         </Border>
+
+                        <ContentPresenter
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                Margin="{TemplateBinding Padding}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                RecognizesAccessKey="True" />
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="OpacityMask" Value="#AA888888"/>
+                            <Setter Property="Margin" Value="2 1" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <!--<Setter Property="Background" Value="DimGray"/>-->
+                            <Setter Property="Foreground" Value="Black"/>
+                            <Setter Property="FontWeight" Value="Bold"/>
+                            <Setter Property="BorderThickness" Value="4" />
+                            <Setter Property="Width" Value="120" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Foreground" Value="#ADADAD"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="MetroButton" TargetType="{x:Type Button}">
+        <Setter Property="FocusVisualStyle" Value="{StaticResource ButtonFocusVisual}"/>
+        <Setter Property="Background" Value="#EEEEEEEE"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="10 5"/>
+        <Setter Property="FontSize" Value="20" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Width" Value="250" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid>
+                        <Border
+                                x:Name="Border"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}">
+                            <Border.Effect>
+                                <DropShadowEffect Color="Black" Opacity=".50" ShadowDepth="6" RenderingBias="Quality" />
+                            </Border.Effect>
+                        </Border>
+
                         <ContentPresenter
                                 HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                 Margin="{TemplateBinding Padding}"
@@ -152,6 +234,143 @@
                             <Setter Property="Foreground" Value="#ADADAD"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <converters:IsLastItemConverter x:Key="IsLastItemConverter"/>
+    <converters:IsProgressedConverter x:Key="IsProgressedConverter"/>
+
+    <LinearGradientBrush x:Key="wizardBarBrush" StartPoint="0.5,0.0" EndPoint="0.5,1.0">
+        <GradientStop Color="AliceBlue" Offset="0.25"/>
+        <GradientStop Color="#FFededed" Offset="0.50"/>
+        <GradientStop Color="#FFFCFCFC" Offset="0.75"/>
+    </LinearGradientBrush>
+
+    <Style TargetType="{x:Type local:KioskProgressBar}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:KioskProgressBar}">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
+                        <Grid >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="7*"></ColumnDefinition>
+                                <ColumnDefinition Width="3*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <ItemsControl ItemsSource="{TemplateBinding ItemsSource}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <UniformGrid Rows="1">
+                                            <UniformGrid.Effect>
+                                                <DropShadowEffect Color="Black" BlurRadius="3" Opacity="0.6" ShadowDepth="0"/>
+                                            </UniformGrid.Effect>
+                                        </UniformGrid>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <DataTemplate.Resources>
+                                            <Style TargetType="Path" x:Key="outerPath">
+                                                <Setter Property="Data" Value="M0.0,0.0 L0.0,0.33 L1.0,0.33 L1.0,0.66 L0.0,0.66 L0.0,1.0"/>
+                                                <Setter Property="StrokeThickness" Value="0"/>
+                                                <Setter Property="Height" Value="21"/>
+                                                <Setter Property="Stretch" Value="Fill"/>
+                                                <Setter Property="Fill" Value="{StaticResource wizardBarBrush}"/>
+                                                <Setter Property="StrokeEndLineCap" Value="Square"/>
+                                                <Setter Property="StrokeStartLineCap" Value="Square"/>
+                                                <Setter Property="Stroke" Value="Transparent"/>
+                                            </Style>
+                                            <Style TargetType="Path" x:Key="innerPath" BasedOn="{StaticResource outerPath}">
+                                                <Setter Property="Data" Value="M0.0,0.0 L0.0,0.45 L1.0,0.45 L1.0,0.55 L0.0,0.55 L0.0,1.0"/>
+                                                <Setter Property="Fill" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:KioskProgressBar}}, Path=Foreground}"/>
+                                                <Setter Property="Stroke" Value="Black"/>
+                                            </Style>
+                                        </DataTemplate.Resources>
+                                        <Grid SnapsToDevicePixels="True">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                            </Grid.RowDefinitions>
+                                            <Grid >
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition/>
+                                                    <ColumnDefinition/>
+                                                </Grid.ColumnDefinitions>
+                                                <Path Name="leftPath"
+                                                      Style="{StaticResource outerPath}"/>
+                                                <Path Grid.Column="1"
+                                                      Name="rightPath"
+                                                      Style="{StaticResource outerPath}"/>
+                                                <Ellipse Grid.ColumnSpan="2" HorizontalAlignment="Center" Stroke="Transparent" Height="20" Width="20" Fill="{StaticResource wizardBarBrush}"/>
+                                                <Ellipse Grid.ColumnSpan="2" HorizontalAlignment="Center" Stroke="Transparent" Height="14" Width="14" Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:KioskProgressBar}}, Path=Foreground}">
+                                                    <Ellipse.Visibility>
+                                                        <MultiBinding Converter="{StaticResource IsProgressedConverter}"
+                                                                      ConverterParameter="False">
+                                                            <Binding RelativeSource="{RelativeSource TemplatedParent}"/>
+                                                            <Binding RelativeSource="{RelativeSource AncestorType={x:Type local:KioskProgressBar}}"
+                                                                     Path="Progress"/>
+                                                        </MultiBinding>
+                                                    </Ellipse.Visibility>
+                                                </Ellipse>
+                                                <Path Name="leftFillPath"
+                                                      Grid.Column="0"
+                                                      Style="{StaticResource innerPath}">
+                                                    <Path.Visibility>
+                                                        <MultiBinding Converter="{StaticResource IsProgressedConverter}"
+                                                                      ConverterParameter="False">
+                                                            <Binding RelativeSource="{RelativeSource TemplatedParent}"/>
+                                                            <Binding RelativeSource="{RelativeSource AncestorType={x:Type local:KioskProgressBar}}"
+                                                                     Path="Progress"/>
+                                                        </MultiBinding>
+                                                    </Path.Visibility>
+                                                </Path>
+                                                <Path Name="rightFillPath" Grid.Column="1"
+                                                      Style="{StaticResource innerPath}">
+                                                    <Path.Visibility>
+                                                        <MultiBinding Converter="{StaticResource IsProgressedConverter}"
+                                                                      ConverterParameter="True">
+                                                            <Binding RelativeSource="{RelativeSource TemplatedParent}"/>
+                                                            <Binding RelativeSource="{RelativeSource AncestorType={x:Type local:KioskProgressBar}}"
+                                                                     Path="Progress"/>
+                                                        </MultiBinding>
+                                                    </Path.Visibility>
+                                                </Path>
+                                            </Grid>
+                                        </Grid>
+                                        <DataTemplate.Triggers>
+                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource PreviousData}}"
+                                                         Value="{x:Null}">
+                                                <Setter TargetName="leftPath" Property="Visibility" Value="Collapsed"/>
+                                                <Setter TargetName="leftFillPath" Property="Visibility" Value="Collapsed"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Converter={StaticResource IsLastItemConverter}}"
+                                                         Value="True">
+                                                <Setter TargetName="rightPath" Property="Visibility" Value="Collapsed"/>
+                                                <Setter TargetName="rightFillPath" Property="Visibility" Value="Collapsed"/>
+                                            </DataTrigger>
+                                        </DataTemplate.Triggers>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                            <ItemsControl Grid.Row="1" ItemsSource="{TemplateBinding ItemsSource}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <UniformGrid Rows="1"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding}" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center" Margin="0,5,0,0" FontFamily="Segoe UI" FontSize="15" Foreground="Black"/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </Grid>
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
