--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/RechargeAmount.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/RechargeAmount.xaml
@@ -9,12 +9,77 @@
         xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         BorderBrush="Black"
         BorderThickness="1"
+        xmlns:kioskControls="clr-namespace:DoyenBiz.CitizenKiosk.Controls"
        MaxWidth="950" Width="900"
         >
     <controls:Flyout.Background>
         <ImageBrush ImageSource="/Resources/Images/ScreenBackground.jpg"/>
     </controls:Flyout.Background>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height=".1*"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".7*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" >
+            <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource screenLogoImage}"/>
+        </StackPanel>
+        <kioskControls:KioskProgressBar x:Name="transactionProgressBar" Grid.Row="1" ItemsSource="{Binding Steps}" Foreground="#FF086398" Progress="{Binding Progress}" SnapsToDevicePixels="True" Margin="40"/>
+        <Grid x:Name="amountToWithdraw" Grid.Row="2">
+            <Grid HorizontalAlignment="Center" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height=".2*"/>
+                    <RowDefinition Height=".2*"/>
+                    <RowDefinition Height=".7*"/>
+                    <RowDefinition Height=".2*"/>
+                    <RowDefinition Height=".3*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" VerticalAlignment="Top"
+                           TextWrapping="WrapWithOverflow" Foreground="Black">Place enter Recharge Amount (in multiples of 10's)</TextBlock>
+                <Grid Grid.Row="1"  Height="50" HorizontalAlignment="Center">
+                    <TextBox x:Name="txtAmount" Width="100" Height="50"
+                             VerticalContentAlignment="Center" TextAlignment="Right" FontSize="20" Text="{Binding SelectedAmount,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                             />
+                    <Button x:Name="btnAmount" Width="100" Height="50"
+                        BorderThickness="2" 
+                        Style="{StaticResource MetroButton}"
+                        Margin="300,0,0,0" Content="Go"
+                        VerticalAlignment="Center" Command="{Binding ButtonCommand}" 
+                            CommandParameter="{Binding Text,ElementName=txtAmount}" />
+                </Grid>
+                <Grid Grid.Row="2">
+                    <StackPanel Width="400" Height="500" HorizontalAlignment="Center" VerticalAlignment="Top" >
+                        <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                            <WrapPanel>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="1" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="1"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="2" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="2"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="3" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="3"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="4" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="4"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="5" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="5"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="6" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="6"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="7" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="7" />
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="8" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="8"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="9" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="9"/>
+                                <Button Width="100" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="0" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="0"/>
+                                <Button Width="220" Height="50" BorderThickness="2" Margin="10,10,10,10"  Style="{StaticResource MetroButton}" Content="backspace" VerticalAlignment="Center"  Command="{Binding KeyButtonCommand}" CommandParameter="backspace"/>
+                            </WrapPanel>
+                        </ScrollViewer>
+                    </StackPanel>
+                </Grid>
+                <TextBlock Grid.Row="3" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" TextAlignment="Left" >Quick Select</TextBlock>
+                <Grid x:Name="bankLogos" Grid.Row="4" Grid.Column="0" VerticalAlignment="Top">
+                    <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                        <WrapPanel Width="700">
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="10,10,10,10" Command="{Binding AmountChangeCommand}" CommandParameter="10">INR 10</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="10,10,10,10" Command="{Binding AmountChangeCommand}" CommandParameter="20">INR 20</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="10,10,10,10" Command="{Binding AmountChangeCommand}" CommandParameter="50">INR 50</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="10,10,10,10" Command="{Binding AmountChangeCommand}" CommandParameter="100">INR 100</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="10,10,10,10" Command="{Binding AmountChangeCommand}" CommandParameter="200">INR 200</Button>
+                        </WrapPanel>
+                    </ScrollViewer>
+                </Grid>
+            </Grid>
+        </Grid>
 
     </Grid>
 </controls:Flyout>
